--- a/PrismKiosk/Views/MainWindow.xaml
+++ b/PrismKiosk/Views/MainWindow.xaml
@@ -1,10 +1,22 @@
-﻿<Window x:Class="PrismKiosk.Views.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:prism="http://prismlibrary.com/"
-        prism:ViewModelLocator.AutoWireViewModel="True"
-        Title="{Binding Title}" Height="350" Width="525" >
+﻿<Window
+    x:Class="PrismKiosk.Views.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:prism="http://prismlibrary.com/"
+    Title="{Binding Title}"
+    Width="1920"
+    Height="1080"
+    prism:ViewModelLocator.AutoWireViewModel="True">
     <Grid>
-        <ContentControl prism:RegionManager.RegionName="ContentRegion" />
+        <Grid.ColumnDefinitions>
+            <!--  키오스크 화면 영역  -->
+            <ColumnDefinition Width="640" />
+            <!--  간격  -->
+            <ColumnDefinition Width="10" />
+            <!--  관리자 화면 영역  -->
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <ContentControl prism:RegionManager.RegionName="KioskContentRegion" />
+        <ContentControl Grid.Column="2" prism:RegionManager.RegionName="ManagerContentRegion" />
     </Grid>
 </Window>
