--- a/PrismKiosk/Views/KioskIntro.xaml
+++ b/PrismKiosk/Views/KioskIntro.xaml
@@ -2,19 +2,56 @@
     x:Class="PrismKiosk.Views.KioskIntro"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:PrismKiosk.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
+    d:DesignHeight="1080"
+    d:DesignWidth="640"
     prism:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d">
     <Grid>
-        <TextBlock
-            HorizontalAlignment="Center"
-            VerticalAlignment="Center"
-            FontSize="30"
-            Text="Intro" />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" MinHeight="360" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <!--  https://learn.microsoft.com/en-us/dotnet/desktop/wpf/graphics-multimedia/how-to-repeat-media-playback?view=netframeworkdesktop-4.8#example&wt.mc_id=WDIT-MVP-5000651  -->
+        <MediaElement
+            x:Name="IntroVideo"
+            Margin="5"
+            VerticalAlignment="Top">
+            <MediaElement.Triggers>
+                <EventTrigger RoutedEvent="MediaElement.Loaded">
+                    <EventTrigger.Actions>
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <MediaTimeline
+                                    RepeatBehavior="Forever"
+                                    Source="https://mediaplatstorage1.blob.core.windows.net/windows-universal-samples-media/elephantsdream-clip-h264_sd-aac_eng-aac_spa-aac_eng_commentary.mp4"
+                                    Storyboard.TargetName="IntroVideo" />
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </EventTrigger.Actions>
+                </EventTrigger>
+            </MediaElement.Triggers>
+            <b:Interaction.Triggers>
+                <b:EventTrigger EventName="MouseDown">
+                    <b:InvokeCommandAction Command="{Binding MouseDownCommand}" />
+                </b:EventTrigger>
+            </b:Interaction.Triggers>
+        </MediaElement>
+        <Border
+            Grid.Row="1"
+            Margin="5"
+            BorderBrush="Black"
+            BorderThickness="1">
+            <TextBlock FontSize="30" Text="Intro Video" />
+            <b:Interaction.Triggers>
+                <b:EventTrigger EventName="MouseDown">
+                    <b:InvokeCommandAction Command="{Binding MouseDownCommand}" />
+                </b:EventTrigger>
+            </b:Interaction.Triggers>
+        </Border>
     </Grid>
 </UserControl>
