--- a/PrismKiosk/Views/OrderStart.xaml
+++ b/PrismKiosk/Views/OrderStart.xaml
@@ -5,14 +5,124 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:PrismKiosk.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
+    xmlns:prism="http://prismlibrary.com/"
+    xmlns:vm="clr-namespace:PrismKiosk.ViewModels"
+    d:DataContext="{d:DesignInstance vm:OrderStartViewModel,
+                                     IsDesignTimeCreatable=True}"
+    d:DesignHeight="1080"
+    d:DesignWidth="640"
+    prism:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d">
     <Grid>
-        <TextBlock
-            HorizontalAlignment="Center"
-            VerticalAlignment="Center"
-            FontSize="30"
-            Text="Order Start" />
+        <!--  일반UI  -->
+        <Grid Visibility="{Binding AppContext.IsDisabledUi, Converter={StaticResource InverterBoolToVisibilityConverter}}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="0.3*" />
+                <RowDefinition Height="0.7*" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <Button
+                Grid.Column="1"
+                Margin="10"
+                Padding="10"
+                HorizontalAlignment="Right"
+                Command="{Binding HomeCommand}"
+                CommandParameter="kiosk"
+                Content="처음으로" />
+            <Button
+                Grid.Row="1"
+                Margin="10"
+                Command="{Binding OrderTypeCommand}"
+                CommandParameter="EatIn"
+                Content="매장 (EAT-IN)" />
+            <Button
+                Grid.Row="1"
+                Grid.Column="1"
+                Margin="10"
+                Command="{Binding OrderTypeCommand}"
+                CommandParameter="ToGo"
+                Content="포장 (TO-GO)" />
+            <Image
+                Grid.Row="2"
+                Grid.ColumnSpan="2"
+                Margin="10"
+                Source="/Assets/Images/delicious-ice-cream-in-studio.jpg"
+                Stretch="UniformToFill" />
+            <TextBlock
+                Grid.Row="2"
+                Grid.ColumnSpan="2"
+                Text="출처 Freepik" />
+            <Button
+                Grid.Row="3"
+                Grid.Column="1"
+                Margin="10"
+                Padding="10"
+                HorizontalAlignment="Right"
+                Command="{Binding DisabledCommand}"
+                CommandParameter="Disabled"
+                Content="장애인" />
+        </Grid>
+        <!--  장애인UI  -->
+        <Grid Visibility="{Binding AppContext.IsDisabledUi, Converter={StaticResource BoolToVisibilityConverter}}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="0.7*" />
+                <RowDefinition Height="0.3*" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <Image
+                Grid.Row="1"
+                Grid.ColumnSpan="2"
+                Margin="5"
+                Source="/Assets/Images/delicious-ice-cream-in-studio.jpg"
+                Stretch="UniformToFill" />
+            <Button
+                Grid.Row="2"
+                Margin="10"
+                Command="{Binding OrderTypeCommand}"
+                CommandParameter="EatIn"
+                Content="매장 (EAT-IN)" />
+            <Button
+                Grid.Row="2"
+                Grid.Column="1"
+                Margin="10"
+                Command="{Binding OrderTypeCommand}"
+                CommandParameter="ToGo"
+                Content="포장 (TO-GO)" />
+            <TextBlock
+                Grid.Row="2"
+                Grid.ColumnSpan="2"
+                Margin="5"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Text="출처 Freepik" />
+            <Button
+                Grid.Row="3"
+                Grid.Column="0"
+                Margin="10"
+                Padding="10"
+                HorizontalAlignment="Left"
+                Command="{Binding HomeCommand}"
+                CommandParameter="kiosk"
+                Content="처음으로" />
+            <Button
+                Grid.Row="3"
+                Grid.Column="1"
+                Margin="10"
+                Padding="10"
+                HorizontalAlignment="Right"
+                Command="{Binding DisabledCommand}"
+                CommandParameter="Normal"
+                Content="일반" />
+        </Grid>
     </Grid>
 </UserControl>
