--- a/PrismKiosk/Views/SelectMenu.xaml
+++ b/PrismKiosk/Views/SelectMenu.xaml
@@ -2,6 +2,7 @@
     x:Class="PrismKiosk.Views.SelectMenu"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:PrismKiosk.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -67,14 +68,25 @@
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
                                 <Grid Margin="10">
+                                    <b:Interaction.Triggers>
+                                        <b:EventTrigger EventName="MouseDown">
+                                            <b:InvokeCommandAction Command="{Binding RelativeSource={RelativeSource AncestorType=ItemsControl}, Path=DataContext.SelectProductCommand}" CommandParameter="{Binding}" />
+                                        </b:EventTrigger>
+                                    </b:Interaction.Triggers>
                                     <Grid.RowDefinitions>
                                         <RowDefinition />
                                         <RowDefinition Height="Auto" />
                                     </Grid.RowDefinitions>
                                     <Image Source="{Binding ImageUri}" Stretch="UniformToFill" />
                                     <StackPanel Grid.Row="1">
-                                        <TextBlock HorizontalAlignment="Center" Text="{Binding Name}" />
-                                        <TextBlock HorizontalAlignment="Center" Text="{Binding Price, StringFormat={}{0:N0}}" />
+                                        <TextBlock
+                                            HorizontalAlignment="Stretch"
+                                            Text="{Binding Name}"
+                                            TextAlignment="Center" />
+                                        <TextBlock
+                                            HorizontalAlignment="Stretch"
+                                            Text="{Binding Price, StringFormat={}{0:N0}}"
+                                            TextAlignment="Center" />
                                     </StackPanel>
                                 </Grid>
                             </DataTemplate>
@@ -109,18 +121,45 @@
                 <ColumnDefinition Width="0.8*" />
                 <ColumnDefinition Width="0.2*" />
             </Grid.ColumnDefinitions>
-            <DataGrid>
+            <DataGrid
+                AutoGenerateColumns="False"
+                IsReadOnly="True"
+                ItemsSource="{Binding AppContext.CurrentOrder.Items}">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="메뉴명" />
-                    <DataGridTextColumn Header="단가" />
-                    <DataGridTextColumn Header="수량" />
-                    <DataGridTextColumn Header="금액" />
+                    <DataGridTextColumn
+                        Width="200"
+                        Binding="{Binding ProductName}"
+                        Header="메뉴명" />
+                    <DataGridTextColumn
+                        Width="100"
+                        Binding="{Binding UnitPrice, StringFormat={}{0:N0}}"
+                        Header="단가"
+                        TextBlock.TextAlignment="Right" />
+                    <DataGridTextColumn
+                        Width="60"
+                        Binding="{Binding Quantity, StringFormat={}{0:N0}}"
+                        Header="수량" />
+                    <DataGridTextColumn
+                        Width="100"
+                        Binding="{Binding Amount, StringFormat={}{0:N0}}"
+                        Header="금액" />
                 </DataGrid.Columns>
             </DataGrid>
-            <Button
-                Grid.Column="1"
-                Margin="10,0,0,0"
-                Content="결제" />
+            <Grid Grid.Column="1" Margin="10,0,0,0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <TextBlock>
+                    <Run Text="총금액" />
+                    <LineBreak />
+                    <Run Text="{Binding AppContext.CurrentOrder.TotalAmount, StringFormat={}{0:N0}}" />
+                </TextBlock>
+                <Button
+                    Grid.Row="1"
+                    Command="{Binding PaymentCommand}"
+                    Content="결제" />
+            </Grid>
         </Grid>
     </Grid>
 </UserControl>
