결제 화면 작업 완료, 각 화면 FontSize 수정

--- a/PrismKiosk/Views/OrderStart.xaml
+++ b/PrismKiosk/Views/OrderStart.xaml
@@ -12,6 +12,7 @@
     d:DesignHeight="1080"
     d:DesignWidth="640"
     prism:ViewModelLocator.AutoWireViewModel="True"
+    FontSize="20"
     mc:Ignorable="d">
     <Grid>
         <!--  일반UI  -->
