--- a/PrismKiosk/Views/KioskIntro.xaml
+++ b/PrismKiosk/Views/KioskIntro.xaml
@@ -10,6 +10,7 @@
     d:DesignHeight="1080"
     d:DesignWidth="640"
     prism:ViewModelLocator.AutoWireViewModel="True"
+    FontSize="20"
     mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
