--- a/PrismKiosk/Views/Payment.xaml
+++ b/PrismKiosk/Views/Payment.xaml
@@ -2,15 +2,107 @@
     x:Class="PrismKiosk.Views.Payment"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:PrismKiosk.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
+    xmlns:vm="clr-namespace:PrismKiosk.ViewModels"
+    d:DataContext="{d:DesignInstance vm:PaymentViewModel,
+                                     IsDesignTimeCreatable=True}"
+    d:DesignHeight="1080"
+    d:DesignWidth="640"
     prism:ViewModelLocator.AutoWireViewModel="True"
+    FontSize="20"
     mc:Ignorable="d">
     <Grid>
-        <TextBlock FontSize="30" Text="Payment" />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="0.4*" />
+            <RowDefinition Height="0.6*" />
+        </Grid.RowDefinitions>
+        <Button
+            Grid.Column="0"
+            Margin="10"
+            Padding="10"
+            HorizontalAlignment="Left"
+            Command="{Binding GoBackCommand}"
+            CommandParameter="kiosk"
+            Content="이전으로" />
+        <Button
+            Grid.Column="0"
+            Margin="10"
+            Padding="10"
+            HorizontalAlignment="Right"
+            Command="{Binding HomeCommand}"
+            CommandParameter="kiosk"
+            Content="처음으로" />
+
+        <Border Grid.Row="1">
+            <Grid
+                Width="300"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Background="LightGray">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <TextBlock Margin="10" Text="받을 금액" />
+                <TextBlock
+                    Grid.Row="1"
+                    Margin="10"
+                    Text="받은 금액" />
+                <TextBlock
+                    Grid.Row="2"
+                    Margin="10"
+                    Text="거스름돈" />
+                <TextBlock
+                    Grid.Row="0"
+                    Grid.Column="1"
+                    Margin="10"
+                    HorizontalAlignment="Right"
+                    Text="{Binding AppContext.CurrentOrder.TotalAmount, StringFormat={}{0:N0}}" />
+                <TextBlock
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    Margin="10"
+                    HorizontalAlignment="Right"
+                    Text="{Binding AppContext.CurrentOrder.ReceivedAmount, StringFormat={}{0:N0}}" />
+                <TextBlock
+                    Grid.Row="2"
+                    Grid.Column="1"
+                    Margin="10"
+                    HorizontalAlignment="Right"
+                    Text="{Binding AppContext.CurrentOrder.Change, StringFormat={}{0:N0}}" />
+            </Grid>
+        </Border>
+
+        <!--  https://learn.microsoft.com/en-us/dotnet/desktop/wpf/graphics-multimedia/how-to-repeat-media-playback?view=netframeworkdesktop-4.8#example&wt.mc_id=WDIT-MVP-5000651  -->
+        <MediaElement
+            x:Name="IntroVideo"
+            Grid.Row="2"
+            Margin="5"
+            VerticalAlignment="Top">
+            <MediaElement.Triggers>
+                <EventTrigger RoutedEvent="MediaElement.Loaded">
+                    <EventTrigger.Actions>
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <MediaTimeline
+                                    RepeatBehavior="Forever"
+                                    Source="https://mediaplatstorage1.blob.core.windows.net/windows-universal-samples-media/elephantsdream-clip-h264_sd-aac_eng-aac_spa-aac_eng_commentary.mp4"
+                                    Storyboard.TargetName="IntroVideo" />
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </EventTrigger.Actions>
+                </EventTrigger>
+            </MediaElement.Triggers>
+        </MediaElement>
     </Grid>
 </UserControl>
