--- a/PrismKiosk/Views/ManagerLogin.xaml
+++ b/PrismKiosk/Views/ManagerLogin.xaml
@@ -2,6 +2,8 @@
     x:Class="PrismKiosk.Views.ManagerLogin"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:behaviors="clr-namespace:PrismKiosk.Behaviors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:PrismKiosk.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -9,12 +11,54 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     prism:ViewModelLocator.AutoWireViewModel="True"
+    FontSize="20"
     mc:Ignorable="d">
-    <Grid>
-        <TextBlock
+    <Border>
+        <Grid
+            Width="400"
             HorizontalAlignment="Center"
             VerticalAlignment="Center"
-            FontSize="30"
-            Text="Manager Login" />
-    </Grid>
+            Background="LightGray">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <TextBlock Margin="10" Text="관리자 로그인" />
+            <TextBlock
+                Grid.Row="1"
+                Margin="10"
+                Text="Id" />
+            <TextBlock
+                Grid.Row="2"
+                Margin="10"
+                Text="Password" />
+            <TextBox
+                Grid.Row="1"
+                Grid.Column="1"
+                Margin="0,0,10,0"
+                Padding="10,10,0,0"
+                Text="{Binding Id, Mode=TwoWay}" />
+            <PasswordBox
+                Grid.Row="2"
+                Grid.Column="1"
+                Margin="0,0,10,0"
+                Padding="10,10,0,0">
+                <b:Interaction.Behaviors>
+                    <behaviors:PasswordBehavior BindingPassword="{Binding Password, Mode=TwoWay}" />
+                </b:Interaction.Behaviors>
+            </PasswordBox>
+            <Button
+                Grid.Row="3"
+                Grid.ColumnSpan="2"
+                Margin="10"
+                Command="{Binding LoginCommand}"
+                Content="Login" />
+        </Grid>
+    </Border>
 </UserControl>
